# lifted-sign

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md  INTEGRATION.md  comparison.md  hosted-terms.md  self-hosting.md
examples/: full-flow.mjs  full_flow.py
sdks/: LICENSE  lifted-sign.d.ts  lifted-sign.mjs  lifted_sign.py  package.json
sign/: __init__.py  __main__.py  app.py  config.py  crypto.py  db.py  esign.py  esign_access.py  esign_disclosure.py  fontmap.py  http_helpers.py  hub_auth.py  integrations.py  mailer.py  pdf_cert.py  pdf_edit.py  pdf_editext.py  pdf_ops.py  pdf_redact.py  pdf_render.py  pdf_sign.py  pdf_stamp.py  ratelimit.py  sign_accounts.py  sign_api_keys.py  sign_ops.py  sign_portal_auth.py  webauth.py  webhooks.py
sign/assets/fonts/: AlexBrush.NOTICE.txt  DroidSansFallback.LICENSE.txt  README.md
sign/routers/: __init__.py  developers.py  envelope.py  meta.py  mysign.py  ops.py  portal.py  signer.py  webhooks.py
tests/: conftest.py  test_accounts_ops.py  test_api_keys_auth.py  test_auth.py  test_boot_sqlite.py  test_branches.py  test_cookie_flag.py  test_db.py  test_db_translate.py  test_editor_and_routes.py  test_engine_extra.py  test_engine_flow.py  test_engine_terminal_edges.py  test_envelope.py  test_hub_auth.py  test_mailer_disclosure.py  test_mailer_smtp.py  test_meta.py  test_misc_units.py  test_owner_scoping.py  test_pdf_sign.py  test_pdf_units.py  test_ratelimit.py  test_routers.py  test_sequential_and_placement.py  test_skeptic_fixes.py  test_stamp_multifield.py  test_webauth_crypto.py  test_webhook_autodisable.py  test_webhooks.py  test_webhooks_ssrf.py
web/: developers.html  envelope.html  og-sign.html  sign-privacy.html  sign-terms.html  sign.html  signapp.html  signland.html
web/ds/: styles.css
web/ds/appkit/: _appkit.css
web/ds/assets/: lds-globe.js
web/ds/fonts/: README.md
web/ds/marketing/: _kit.css  (+1 more)
(+6 files in other folders)
